# slang

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build_and_test.yml
examples/: CMakeLists.txt  obfuscate.cpp  pattern_matching.cpp  user_macros.cpp
src/: CMakeLists.txt
src/slang/: CMakeLists.txt  ast.h  builtins.cpp  builtins.glsl  builtins.h  cast.h  context.cpp  context.h  environment.cpp  environment.h  keyword.h  keywordlist.h  lexer.cpp  lexer.h  location.h  logger.h  main.cpp  parser.cpp  parser.h  preprocess.cpp  preprocess.h  preprocessor.cpp  preprocessor.h  print.cpp  print.h  ptr.h  sema.cpp  sema.h  token.h  tokenlist.h  types.cpp  types.h
test/: run.py
test/lexer/invalid/: literals.glsl  literals.glsl.err.ref  literals.glsl.out.ref  unknown.glsl  unknown.glsl.err.ref  unknown.glsl.out.ref
test/lexer/valid/: escape.glsl  escape.glsl.out.ref  ident.glsl  ident.glsl.out.ref  literals.glsl  literals.glsl.out.ref
test/parser/invalid/: arg-function.glsl  arg-function.glsl.err.ref  arg-function.glsl.out.ref  bad-decls.glsl  bad-decls.glsl.err.ref  bad-decls.glsl.out.ref  bad-qualifiers.glsl  bad-qualifiers.glsl.err.ref  bad-qualifiers.glsl.out.ref  body-function.glsl  body-function.glsl.err.ref  empty-expr.glsl  empty-expr.glsl.err.ref  empty-expr.glsl.out.ref  eof-comment.glsl  eof-comment.glsl.err.ref
test/parser/valid/: arrays.glsl  arrays.glsl.out.ref  comments.glsl  comments.glsl.out.ref  exprs.glsl  exprs.glsl.out.ref  flow.glsl  flow.glsl.out.ref  functions.glsl  functions.glsl.out.ref  interfaces.glsl  interfaces.glsl.out.ref  precision.glsl  precision.glsl.out.ref  primtypes.glsl  primtypes.glsl.out.ref  qualifiers.glsl  qualifiers.glsl.out.ref  shadertoy.glsl  shadertoy.glsl.out.ref  structs.glsl  structs.glsl.out.ref
test/preprocessor/invalid/: bad-directives.glsl  bad-directives.glsl.err.ref  bad-directives.glsl.out.ref  bad-elif.glsl  bad-elif.glsl.err.ref  bad-else.glsl  bad-else.glsl.err.ref  broken-conds.glsl  broken-conds.glsl.err.ref  broken-conds.glsl.out.ref  builtin.glsl  builtin.glsl.err.ref  concat.glsl  concat.glsl.err.ref  concat.glsl.out.ref  define.glsl  define.glsl.err.ref  define.glsl.out.ref  duplicate-versions.glsl  duplicate-versions.glsl.err.ref  duplicate-versions.glsl.out.ref  error.glsl  error.glsl.err.ref  extension.glsl  extension.glsl.err.ref  extension.glsl.out.ref  ifdef-ifndef.glsl.err.ref  ifdef-ifndef.glsl.out.ref  ifdef_ifndef.glsl  ifdef_ifndef.glsl.err.ref  invalid-macro.glsl  invalid-macro.glsl.err.ref  invalid-macro.glsl.out.ref  line.glsl  line.glsl.err.ref  missing-args.glsl  missing-args.glsl.err.ref  missing-args.glsl.out.ref  missing-endif.glsl  missing-endif.glsl.err.ref  (+29 more)
test/preprocessor/valid/: builtin.glsl  builtin.glsl.out.ref  concat.glsl  concat.glsl.out.ref  defined.glsl  defined.glsl.out.ref  defines.glsl  defines.glsl.out.ref  expansion.glsl  expansion.glsl.out.ref  extension.glsl  if-elif-else.glsl  if-elif-else.glsl.out.ref  ifdef_ifndef.glsl  ifdef_ifndef.glsl.out.ref  line.glsl  line.glsl.out.ref  macro_space_paren.glsl  macro_space_paren.glsl.out.ref  multiline.glsl  multiline.glsl.out.ref  pragma.glsl  pragma.glsl.out.ref  recursive.glsl  recursive.glsl.out.ref  undef.glsl  undef.glsl.out.ref  version-compat.glsl  version-compat.glsl.out.ref  version-core.glsl  version-core.glsl.out.ref  version-es.glsl  version-es.glsl.out.ref  version.glsl
